--- a/front/package.json
+++ b/front/package.json
@@ -13,16 +13,20 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/axios": "^0.14.0",
+    "@types/jquery-mask-plugin": "^1.14.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-input-mask": "^3.0.2",
     "axios": "^1.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
+    "jquery-mask-plugin": "^1.14.16",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-input-mask": "^2.0.4",
     "sass": "^1.56.1",
     "typescript": "4.9.3"
   }
