--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,7 @@
       "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.14",
       "@types/jsonwebtoken": "^8.5.9",
-      "@types/node": "^18.11.9",
+      "@types/node": "^18.11.10",
       "@types/nodemon": "^1.19.2",
       "@types/pg": "^8.6.5",
       "@types/yup": "^0.32.0",
@@ -18,19 +18,25 @@
       "typescript": "^4.9.3"
    },
    "dependencies": {
+      "@types/moment": "^2.13.0",
       "bcrypt": "^5.1.0",
       "body-parser": "^1.19.1",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
       "jsonwebtoken": "^8.5.1",
+      "moment": "^2.29.4",
       "pg": "^8.8.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "^0.3.10",
       "yup": "^0.32.11"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "build": "tsc --target ES5 --experimentalDecorators --emitDecoratorMetadata",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "nodemon --exec ts-node ./src/index.ts",
+      "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
+      "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run"
    }
 }
