--- a/back/package.json
+++ b/back/package.json
@@ -35,7 +35,7 @@
    },
    "scripts": {
       "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d ./src/data-source.ts",
-		"build": "rm -rf ./dist && tsc",
+		 "build": "tsc --target ES5 --experimentalDecorators --emitDecoratorMetadata",
       "typeorm": "typeorm-ts-node-commonjs",
       "dev": "nodemon --exec ts-node ./src/index.ts",
       "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
