--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,7 @@
       "@types/yup": "^0.32.0",
       "nodemon": "^2.0.20",
       "ts-node": "^10.9.1",
-      "typescript": "^4.7.4"
+      "typescript": "^4.9.3"
    },
    "dependencies": {
       "@types/moment": "^2.13.0",
@@ -35,7 +35,7 @@
    },
    "scripts": {
       "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d ./src/data-source.ts",
-		 "build": "tsc --target ES5 --experimentalDecorators --emitDecoratorMetadata",
+		"build": "rm -rf ./dist && tsc",
       "typeorm": "typeorm-ts-node-commonjs",
       "dev": "nodemon --exec ts-node ./src/index.ts",
       "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
