--- a/back/package.json
+++ b/back/package.json
@@ -34,7 +34,7 @@
      "dev": "nodemon --exec ts-node ./src/index.ts",
      "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
      "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
-     "build": "mkdir dist && tsc",
+     "build": "mkdir dist && tsc typeorm build --output public",
      "start": "node /dist/index.js"
    }
  }
