--- a/back/package.json
+++ b/back/package.json
@@ -13,8 +13,7 @@
     "@types/node": "^18.11.15",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4",
-    "vercel": "^28.9.0"
+    "typescript": "4.7.4"
   },
   "dependencies": {
     "@types/yargs": "^17.0.17",
@@ -35,8 +34,7 @@
     "dev": "nodemon --exec ts-node ./src/index.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
-    "build": "mkdir dist && tsc typeorm build public",
-    "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "build": "mkdir dist && tsc",
+    "start": "node /dist/index.js"
   }
 }
