--- a/back/package.json
+++ b/back/package.json
@@ -35,6 +35,6 @@
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
     "build": "mkdir dist && tsc",
-    "start": "node ./opt/render/project/src/dist/index.js"
+    "start": "node ./dist/index.js"
   }
 }
