--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -9,7 +9,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowJs": true,
-		"outDir": "./dist",
+		"outDir": "opt/render/project/src/dist",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
@@ -18,7 +18,7 @@
 		"typeRoots": ["./src/@types"]
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"],
+	"exclude": ["node_modules", "opt/render/project/src/dist"],
 	"ts-node": {
 		"files": true
 	}
