--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,11 +1,11 @@
 
 {
 	"compilerOptions": {
-		"target": "es2018",
+		"target": "es2020",
 		"lib": ["es5", "es6", "ES2018"],
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"module": "commonjs",
+		"module": "es2020",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowJs": true,
