--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,14 +1,15 @@
+
 {
 	"compilerOptions": {
-		"target": "es2020",
+		"target": "es5",
 		"lib": ["es5", "es6", "ES2018"],
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"module": "es2020",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowJs": true,
-		"outDir": "./dist",
+		"outDir": "opt/render/project/src/dist",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
@@ -17,7 +18,7 @@
 		"typeRoots": ["./src/@types"]
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"],
+	"exclude": ["node_modules", "opt/render/project/src/dist"],
 	"ts-node": {
 		"files": true
 	}
