--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.9.10",
     "@types/axios": "^0.14.0",
     "@types/jquery-mask-plugin": "^1.14.4",
     "@types/node": "18.11.9",
@@ -26,8 +27,11 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-input-mask": "^2.0.4",
+    "react-use": "^17.4.0",
     "sass": "^1.56.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
   }
 }
