--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-hot-toast": "^2.4.0",
     "react-input-mask": "^2.0.4",
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
