--- a/front/package.json
+++ b/front/package.json
@@ -17,19 +17,23 @@
     "@types/jquery-mask-plugin": "^1.14.4",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-currency-format": "^1.0.0",
     "@types/react-dom": "18.0.9",
     "@types/react-input-mask": "^3.0.2",
+    "@types/react-text-mask": "^5.4.11",
+    "@types/text-mask-addons": "^3.8.1",
     "axios": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
-    "jquery-mask-plugin": "^1.14.16",
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "react-hot-toast": "^2.4.0",
     "react-input-mask": "^2.0.4",
+    "react-text-mask": "^5.5.0",
     "react-use": "^17.4.0",
     "sass": "^1.56.1",
     "typescript": "4.9.3",
