--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/axios": "^0.14.0",
     "@types/jquery-mask-plugin": "^1.14.4",
     "@types/node": "18.11.9",
+    "@types/query-string": "^6.3.0",
     "@types/react": "18.0.25",
     "@types/react-currency-format": "^1.0.0",
     "@types/react-dom": "18.0.9",
@@ -26,7 +27,10 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
+    "install": "^0.13.0",
     "next": "13.0.5",
+    "npm": "^9.2.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
