--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@types/axios": "^0.14.0",
     "@types/jquery-mask-plugin": "^1.14.4",
+    "@types/moment": "^2.13.0",
     "@types/node": "18.11.9",
     "@types/query-string": "^6.3.0",
     "@types/react": "18.0.25",
@@ -28,6 +29,7 @@
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6",
     "install": "^0.13.0",
+    "moment": "^2.29.4",
     "next": "13.0.5",
     "npm": "^9.2.0",
     "query-string": "^8.1.0",
